--- a/templates/argocd/git_repo/applications/cert-manager.yaml.j2
+++ b/templates/argocd/git_repo/applications/cert-manager.yaml.j2
@@ -28,6 +28,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
     syncOptions:
     -  Validate=true
