Moved default admin & password out of Helm chart

--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -140,7 +140,7 @@ spec:
             # subPath: ""
             # existingClaim:
           admin:
-            existingSecret: ""
+            existingSecret: "{{prometheus_op.release_name}}-grafana"
             userKey: admin-user
             passwordKey: admin-password
 
