FIX: typo in variable name

--- a/templates/prometheus-op/namespaces/monitoring.yaml.j2
+++ b/templates/prometheus-op/namespaces/monitoring.yaml.j2
@@ -2,4 +2,4 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{install.prometheus_operato.namespace}}
+  name: {{install.prometheus_operator.namespace}}
