Comment out nameTemplate per dev recommendation

--- a/templates/user-files/democratic_csi/iscsi-driver-config-secret.yaml.j2
+++ b/templates/user-files/democratic_csi/iscsi-driver-config-secret.yaml.j2
@@ -45,7 +45,7 @@ stringData:
 {% raw %}
       # Set a comment on the target and extent to identify what it belongs to
       extentCommentTemplate: "{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}"
-      nameTemplate: "{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}"
+      # nameTemplate: "{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}-{{ parameters.[csi.storage.k8s.io/pvc/name] }}"
 {% endraw %}
       # add as many as needed
       targetGroups:
