--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -148,7 +148,6 @@ spec:
               # To enable searching configMap accross all namespaces
               searchNamespace: {{install.prometheus_operator.grafana.sidecar.search_namespaces}}
 
-
         # AlertManager values
         # Reference: https://prometheus.io/docs/alerting/latest/configuration/
         alertmanager:
@@ -170,33 +169,8 @@ spec:
                       storage: {{install.prometheus_operator.alertmanager.storage_claim.claim_size}}
             externalUrl: {% if install.traefik.dashboard.enable_https|default(false)|bool == false %}http://{% else %}https://{% endif %}{{install.prometheus_operator.alertmanager.dashboard.ingress_name|default("k3s.{{ansible_domain}}")|lower}}{{install.prometheus_operator.alertmanager.dashboard.path|default("/alertmanager")}}
 
-            # Configuration Values for Helm for Alert Configurations
-            # Reference: https://prometheus.io/docs/alerting/latest/configuration/
-            config:
-              global:
-                resolve_timeout: 5m
-              route:
-                receiver: default-receiver
-                group_wait: 30s
-                group_interval: 5m
-                repeat_interval: 4h
-                group_by: [cluster, alertname]
-                # All alerts that do not match the following child routes
-                # will remain at the root node and be dispatched to 'default-receiver'.
-                routes:
-                #  - matchers:
-                #    - service=~"foo1|foo2|baz"
-                #  receiver: database-team
-              receivers:
-{% if VAULT_SLACK_CONFIG_API_URL_SECRET is defined %}
-              - name: 'default-receiver'
-                # https://prometheus.io/docs/alerting/latest/configuration/#slack_config
-                slack_configs:
-                  - api_url: "{{VAULT_SLACK_CONFIG_API_URL_SECRET}}"
-                    send_resolved: true
-                    channel: 'monitoring'
-                    {% raw %}text: "{{ range .Alerts }}<!channel> {{ .Annotations.summary }}\n{{ .Annotations.description }}\n{{ end }}"{% endraw %}
-{% endif %}
+            useExistingSecret: true
+            configSecret: alertmanager-kube-prometheus-stack-alertmanager-config
 
   destination:
     server: https://kubernetes.default.svc
