Added Grafana Clock Panel plugin

--- a/templates/prometheus-op/applications/prometheus-op.yaml.j2
+++ b/templates/prometheus-op/applications/prometheus-op.yaml.j2
@@ -134,6 +134,7 @@ spec:
 
           plugins:
             - grafana-piechart-panel
+            - grafana-clock-panel
 
           sidecar:
             dashboards:
