Added more dashboards via configMapGenerator

--- a/templates/grafana-dashboards/workloads/grafana-dashboards/kustomization.yaml.j2
+++ b/templates/grafana-dashboards/workloads/grafana-dashboards/kustomization.yaml.j2
@@ -34,3 +34,12 @@ configMapGenerator:
 
 - name: k8s-views-pods-15760
   files: [ dashboards/k8s-views-pods-15760.json ]
+
+- name: k8s-system-api-server-15761
+  files: [ dashboards/k8s-system-api-server-15761.json ]
+
+- name: k8s-views-namespaces-15758
+  files: [ dashboards/k8s-views-namespaces-15758.json ]
+
+- name: k8s-system-coredns-15762
+  files: [ dashboards/k8s-system-coredns-15762.json ]
