--- a/templates/argocd/git_repo/renovate.json.j2
+++ b/templates/argocd/git_repo/renovate.json.j2
@@ -1,8 +1,16 @@
 {% raw -%}
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:base"],
   "argocd": {
-    "fileMatch": ["applications/.+\\.yaml$"]
-  }
+  	"fileMatch": ["applications/.+\\.yaml$"]
+  },
+  "regexManagers": [
+    {
+      "description": "Update Democratic-csi docker image references",
+      "fileMatch": ["^applications\\/democratic_csi_.*\\.yaml$"],
+      "matchStrings": ["image: (?<depName>.*?):(?<currentValue>.*?)\\s+"],
+      "datasourceTemplate": "docker"
+  }]
 }
 {% endraw %}
