Added Cert-Manager Monitoring & Alerting

--- a/templates/grafana-dashboards/workloads/grafana-dashboards/kustomization.yaml.j2
+++ b/templates/grafana-dashboards/workloads/grafana-dashboards/kustomization.yaml.j2
@@ -26,6 +26,9 @@ configMapGenerator:
 - name: k8s-app-traefik-13165
   files: [ dashboards/k8s-app-traefik-13165.json ]
 
+- name: k8s-app-cert-manager
+  files: [ dashboards/k8s-app-cert-manager.json]
+
 - name: k8s-views-global-15757
   files: [ dashboards/k8s-views-global-15757.json ]
 
